# Qstroke

./: .gitignore  AUTHORS  Cargo.toml  M_arrow.glif  Makefile  O.glif  O_arrow.glif  O_stroked.glif  Q_.glif  Q_stroked.glif  README.md  cjk.glif  l.glif  simple.glif
.github/workflows/: rust.yml
assets/: dash.glif  dot.glif
docs/: index.html
docs/man/: MFEKstroke.1
example_glifs/: Q2.glif  lol.glif
fontforge-sys/: Cargo.toml  README.md  build.rs  nib2.glif
fontforge-sys/src/: lib.rs
fontforge-sys/tests/: splinesets_convert.rs
src/: constant_width_stroke.rs  consts.rs  dash.glif  dash_along_path.rs  dot.glif  fontforge_nib.rs  glifwriter.rs  main.rs  nib_stroke.rs  pattern_along_path.rs  validators.rs  variable_width_stroke.rs  variable_width_stroking.rs
src/MFEKmath/: arclenparameterization.rs  evaluate.rs  line.rs  mod.rs  rect.rs  vector.rs
src/MFEKmath/bezier/: characteristics.rs  evaluate.rs  flo.rs  intersection.rs  mod.rs  primitive.rs
src/MFEKmath/interpolator/: mod.rs
src/MFEKmath/piecewise/: evaluate.rs  glif.rs  mod.rs  skia.rs  skpath.rs
src/MFEKmath/vector/: mod.rs
src/nib_stroke/: fontforge.rs
src/qmath/: arclenparameterization.rs  intersection.rs  mod.rs  piecewise.rs  vector.rs
src/qmath/bezier/: evaluate.rs  mod.rs
