[package]
name = "MFEKstroke"
version = "0.0.0"
authors = ["Matthew Blanchard <matthewrblanchard@gmail.com>", "MFEK authors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parse command line arguments
clap = "2.33.3"

# parses .glif files 
glifparser = { git = "https://github.com/MFEK/glifparser.rlib" }
MFEKmath = { git = "https://github.com/MFEK/math.rlib", branch = "main"}

# For reading and writing glifs
xmltree = "0.10.1"
log = "0.4.11"
xmlwriter = "0.1.0"

# Can link FontForge as a dylib, if you have it installed. For nib stroking
fontforge-sys = { path = "fontforge-sys", optional = true }

[features]
fontforge = ["fontforge-sys"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
