[package]
name = "MFEKstroke"
version = "0.0.0"
authors = ["Matthew Blanchard <matthewrblanchard@gmail.com>", "MFEK authors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parse command line arguments
clap = { git = "https://github.com/MFEK/clap.rlib", branch = "validator_all" }

# parses .glif files 
glifparser = { git = "https://github.com/MFEK/glifparser.rlib", branch = "master", features=["mfek"] }
#glifparser = { path = "../glifparser.rlib", features=["mfek"] } # for development
MFEKmath = { git = "https://github.com/MFEK/math.rlib", branch = "main"}
#MFEKmath = { path = "../math.rlib" } # for development
mfek-ipc = { git = "https://github.com/MFEK/ipc.rlib" }
#mfek-ipc = { path = "../ipc.rlib" } # for development

# For reading and writing glifs
xmltree = "0.10"
log = "0.4.11"
env_logger = "0.9"
serde_json = "1.0" # for glifjson

# Can link FontForge as a dylib, if you have it installed. For nib stroking
fontforge-sys = { path = "fontforge-sys", optional = true }

[features]
fontforge = ["fontforge-sys"]

[profile.release]
opt-level = 'z'
#lto = true
codegen-units = 1
