[package]
name = "fontforge-sys"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
glifparser = { git = "https://github.com/MFEK/glifparser.rlib" }
